# component-analysis

./: .gitignore  Cargo.toml  analysis.db  plans.md  test_binary  test_binary.c  test_binary_build.py
src/: main.rs
src/analysis/: call_graph.rs  capabilities.rs  data_flow.rs  disassembly.rs  mod.rs  syscalls.rs
src/cli/: analyze.rs  database.rs  dynamic_analysis.rs  ml_analysis.rs  mod.rs  network_analysis.rs  scan.rs  visualize.rs
src/database/: mod.rs  models.rs  queries.rs  schema.rs
src/documentation/: lookup.rs  mod.rs  sources.rs  syntax.rs
src/dynamic/: mod.rs
src/investigation/: mod.rs
src/ml/: mod.rs
src/network/: mod.rs
src/parser/: common.rs  elf.rs  mod.rs  pe.rs
src/performance/: mod.rs
src/reporting/: mod.rs
src/types/: analysis.rs  component.rs  documentation.rs  graph.rs  mod.rs
src/visualization/: app.rs  components.rs  documentation.rs  graph.rs  layouts.rs  mod.rs
