[package]
name = "component-analysis"
version = "0.1.0"
edition = "2021"
description = "Cyber asset analysis tool for recording and visualizing components from CPU instructions to networks"
license = "MIT OR Apache-2.0"

[[bin]]
name = "component-analyzer"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }

# Binary parsing and analysis
goblin = "0.8"
capstone = "0.12"

# Graph structures
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
num_cpus = "1.16"

# GUI (optional, for visualization)
egui = { version = "0.30", optional = true }
eframe = { version = "0.30", optional = true }

[features]
default = ["gui"]
gui = ["egui", "eframe"]
